--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
@@ -10,8 +11,9 @@
 
 <body>
     <div id="app">
-        <div id="pixi-container"></div>
+        <div id="pixi-container" style="display: none"></div>
     </div>
     <script type="module" src="/src/index.ts"></script>
 </body>
+
 </html>
